Bug 687800 - %%ViewingOrientation not processed by pdfwrite
Summary: %%ViewingOrientation not processed by pdfwrite
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PDF Writer (show other bugs)
Version: master
Hardware: PC Windows XP
: P3 normal
Assignee: Igor Melichev
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2004-11-17 13:47 UTC by Edward
Modified: 2008-12-19 08:31 UTC (History)
1 user (show)

See Also:
Customer:
Word Size: ---


Attachments
PostScript file (488.80 KB, application/postscript)
2004-11-17 13:48 UTC, Edward
Details
PDF file created by GS Head (63.81 KB, application/pdf)
2004-11-17 13:49 UTC, Edward
Details
PDF file created by Distiller (82.62 KB, application/pdf)
2004-11-17 13:49 UTC, Edward
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Edward 2004-11-17 13:47:49 UTC
When i'm trying to convert the attached PostScript file into PDF with today GS 
HEAD (after ray patch) the resulting pdf file has all pages portrait.
Adobe Distiller and Jaws PDF Creator both convert this document just fine.

PS. %%creator and %%title fields are converted just fine now.
Comment 1 Edward 2004-11-17 13:48:42 UTC
Created attachment 1039 [details]
PostScript file
Comment 2 Edward 2004-11-17 13:49:15 UTC
Created attachment 1040 [details]
PDF file created by GS Head
Comment 3 Edward 2004-11-17 13:49:52 UTC
Created attachment 1041 [details]
PDF file created by Distiller
Comment 4 Igor Melichev 2005-08-23 12:28:07 UTC
Patch to HEAD :
http://ghostscript.com/pipermail/gs-cvs/2005-August/005658.html